LIBITD-1671. Modified "next_item" to be a string instead of an integer
Aleph returns a barcode for the "next_item", so the variable needs
to be a string, instead of an integer.

https://issues.umd.edu/browse/LIBITD-1671

--- a/mountebank/items_success_multiple_iterations.ejs
+++ b/mountebank/items_success_multiple_iterations.ejs
@@ -15,7 +15,7 @@
                 "path": "/items/source",
                 "method": "GET",
                 "headers": { "Content-Type": "application/json" },
-                "query": { "nextitem": "3" }
+                "query": { "nextitem": "003375441000010" }
               }
             }
           ]
